# Vits-Android-ncnn

./: README.md  build.gradle  build_ncnn_android.bat
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/openjtalk/mecab/: dictionary.cpp
gradle/wrapper/: gradle-wrapper.properties
